# ethical_regulatory_social_fair_ai_challenges

./: README.md
week_2_interpretable_models/: main.py  pyproject.toml
week_2_interpretable_models/data/: week-2_Churn-Modelling.xlsx
week_4_lime_smile/: lime.ipynb  lime_image.ipynb  main.py  pyproject.toml  xwhy-for-image-classification.ipynb
