[project]
name = "week-2-interpretable-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "ipywidgets>=8.1.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]
