[project]
name = "week-4-lime-smile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "scikit-learn>=1.7.2",
]
