[project]
name = "week-4-lime-smile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.11.3",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
]
